examples/negative/pub_effect/pub_fn_match_arm_effect.kai
# Negative fixture (#511 / pub-effect contract): a `pub fn`
# declares a pure row, but one match arm calls `print`. Effects
# inside arms must surface in the function's row.

pub fn classify(n: Int) : Int = match n {
  0 -> { print("zero"); 0 }
  _ -> n
}

fn main() : Int / Console = classify(0)
